# bcftools

./: CMakeLists.txt  NEWS  bam2bcf.c  bam2bcf.h  mpileup.c
plasma/: test.out
plugins/: trio-dnm.c
test/: test.pl  trio-dnm.3.out  trio-dnm.3.vcf
