cmake_minimum_required(VERSION 3.20)
project(bcftools C)

set(CMAKE_CXX_STANDARD 11)
add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_C_FLAGS_DEBUG "$ENV{CXX_FLAGS} -O0 -Wall -ggdb -fkeep-inline-functions -Wl,--allow-multiple-definition")
include_directories(.)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
#find_package(htslib REQUIRED)
#include_directories(/home/caronkey/docs/cityu/bcftools/submodules/htslib)
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L /home/caronkey/docs/cityu/bcftools/submodules/htslib")
add_executable(bcftools
        plugins/ad-bias.c
        plugins/add-variantkey.c
        plugins/af-dist.c
        plugins/allele-length.c
        plugins/check-ploidy.c
        plugins/check-sparsity.c
        plugins/color-chrs.c
        plugins/contrast.c
        plugins/counts.c
        plugins/dosage.c
        plugins/fill-AN-AC.c
        plugins/fill-from-fasta.c
        plugins/fill-tags.c
        plugins/fixploidy.c
        plugins/fixref.c
        plugins/frameshifts.c
        plugins/GTisec.c
        plugins/GTsubset.c
        plugins/guess-ploidy.c
        plugins/gvcfz.c
        plugins/impute-info.c
        plugins/indel-stats.c
        plugins/isecGT.c
        plugins/mendelian.c
        plugins/missing2ref.c
        plugins/parental-origin.c
        plugins/prune.c
        plugins/remove-overlaps.c
        plugins/scatter.c
        plugins/setGT.c
        plugins/smpl-stats.c
        plugins/split-vep.c
        plugins/split.c
        plugins/tag2tag.c
        plugins/trio-dnm2.c
        plugins/trio-stats.c
        plugins/trio-switch-rate.c
        plugins/variantkey-hex.c
        abuf.c
        abuf.h
        bam2bcf.c
        bam2bcf.h
        bam2bcf_indel.c
        bam_sample.c
        bam_sample.h
        bcftools.h
        bin.c
        bin.h
        call.h
        ccall.c
        cols.c
        cols.h
        consensus.c
        convert.c
        convert.h
        csq.c
        dist.c
        dist.h
        em.c
        extsort.c
        extsort.h
        filter.c
        filter.h
        gvcf.c
        gvcf.h
        hclust.c
        hclust.h
        hex.h
        HMM.c
        HMM.h
        khash_str2str.h
        kheap.h
        kmin.c
        kmin.h
        main.c
        mcall.c
        mpileup.c
        mw.h
        peakfit.c
        peakfit.h
        ploidy.c
        ploidy.h
        polysomy.c
        prob1.c
        prob1.h
        rbuf.h
        regidx.c
        regidx.h
        reheader.c
        smpl_ilist.c
        smpl_ilist.h
        str_finder.c
        str_finder.h
        tabix.c
        tsv2vcf.c
        tsv2vcf.h
        utlist.h
        variantkey.h
        vcfannotate.c
        vcfbuf.c
        vcfbuf.h
        vcfcall.c
        vcfcnv.c
        vcfconcat.c
        vcfconvert.c
        vcffilter.c
        vcfgtcheck.c
        vcfindex.c
        vcfisec.c
        vcfmerge.c
        vcfnorm.c
        vcfplugin.c
        vcfquery.c
        vcfroh.c
        vcfsom.c
        vcfsort.c
        vcfstats.c
        vcfview.c
        vcmp.c
        vcmp.h
        version.c)
target_link_libraries(bcftools -lhts -lz -lm -ldl -lpthread -lgsl -lcblas)